fix icon causing text overflow

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -309,7 +309,7 @@ section {
 .repo {
     flex: 0 auto;
     min-width: fit-content;
-
+   
     h3 {
         width: 100%;
         display: inline-block;
@@ -340,25 +340,30 @@ section {
         margin-left: 10px;
     }
 
+    &::after {
+        font-weight: 900;
+        float: right;
+        color: white;
+        @media screen and (max-width: $tablet) {
+            float: none;
+        }
+    }
+
     &.github {
         &::after {
             font-family: "Font Awesome 5 Brands";
-            font-weight: 900;
             content: "\f09b";
-            float: right;
-            color: white;
         }
     }
 
     &.ext-link {
         &::after {
             font-family: "Font Awesome 5 Free";
-            font-weight: 900;
             content: "\f35d";
-            float: right;
-            color: white;
         }
     }
+
+    
 }
 
 .content {
